--- a/iris-settings-panel.html
+++ b/iris-settings-panel.html
@@ -12,8 +12,20 @@
       :host {
         display: block;
       }
+      
+      paper-fab {
+        border-radius: 3px;
+        background-color: rgba(0, 0, 0, 0.0);
+        border: 3px solid #6E4D44;
+        color: #6E4D44;
+      }
+      
+      paper-fab.flat {
+        @applay(--shadow-none);
+      }
     </style>
-    <iron-meta id="meta"></iron-meta>
+    <paper-fab class="flat" mini icon="chevron-left" elevation="0" on-click="closeSettings"> </paper-fab>
+    <iris-api-controller id="api"></iris-api-controller>
     <template id="groups" is="dom-repeat" items="{{description}}" as="group">
       <h2>{{group.name}}</h2>
       <section class="settings-group">
@@ -31,9 +43,15 @@
         is: 'iris-settings-panel',
         properties: {},
         ready() {
-          let api = this.$.meta.byKey('api');
+          let api = this.$.api;
           let settings = api.require('settings');
           this.description = settings.description;
+        },
+        closeSettings() {
+          window.history.back();
+          setTimeout(() => {
+            window.location.reload();
+          }, 100);
         }
       });
     })();
