--- a/iris-settings-control.html
+++ b/iris-settings-control.html
@@ -66,7 +66,7 @@
         observers: [
           'itemValueChanged(item.value)'
         ],
-        ready() {
+        attached() {
           let stored = this.$.settings.getItem(this.item.name);
 
           this.set('item.value', this.item.isToggle ? stored === 'true' : stored);
