--- a/iris-settings-panel.html
+++ b/iris-settings-panel.html
@@ -47,7 +47,7 @@
         },
         closeSettings() {
           // window.history.back();
-          page('/');
+          page('/controlpanel');
           setTimeout(() => {
             window.location.reload();
           }, 10);
