--- a/iris-settings-panel.html
+++ b/iris-settings-panel.html
@@ -56,11 +56,8 @@
       </section>
     </template>
 
-    <paper-button on-tap="checkComplex" raised>
-      Проверить
-    </paper-button>
+    <paper-button on-tap="checkComplex" raised> Проверить </paper-button>
     <paper-button hidden$="[[!valueChanged]]" on-tap="save" raised>Сохранить</paper-button>
-
 
   </template>
 
